--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=neophenon!@#
 
 mybatis.type-aliases-package=com.example.employeemanagement_system.entityModel
-mybatis.mapper-locations=classpath:mapper/employeeMapper.xml,mapper/managerMapper.xml
+mybatis.mapper-locations=classpath:mapper/employeeMapper.xml,mapper/managerMapper.xml,mapper/accountCreationMapper.xml,mapper/userDetailMapper.xml
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
